WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88235
[Microdata] An element with an empty itemprop='' should not get listed in the .properties list
https://bugs.webkit.org/show_bug.cgi?id=88235
Summary
[Microdata] An element with an empty itemprop='' should not get listed in the...
Arko Saha
Reported
2012-06-04 08:09:27 PDT
According to the latest specification
http://www.whatwg.org/specs/web-apps/current-work/multipage/microdata.html
, an element with an empty itemprop='' should not get listed in the .properties list. Please check :
http://html5.org/r/6854
for the spec change.
Attachments
Patch
(3.96 KB, patch)
2012-06-04 08:46 PDT
,
Arko Saha
rniwa
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Arko Saha
Comment 1
2012-06-04 08:46:28 PDT
Created
attachment 145593
[details]
Patch
Ryosuke Niwa
Comment 2
2012-06-08 00:07:52 PDT
Comment on
attachment 145593
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=145593&action=review
> LayoutTests/fast/dom/MicroData/element-with-empty-itemprop.html:18 > +
Why the blank line?
Arko Saha
Comment 3
2012-06-08 05:17:30 PDT
Committed
r119822
: <
http://trac.webkit.org/changeset/119822
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug