Microdata: An element with an empty itemprop='' should not get listed in the .properties list. https://bugs.webkit.org/show_bug.cgi?id=88235

Reviewed by Ryosuke Niwa.

Source/WebCore: 

As per the specification change http://html5.org/r/6854, an element should be listed in .properties
if the elelement has an attribute itemprop specified and the element has one or more property names.

Test: fast/dom/MicroData/element-with-empty-itemprop.html

* html/HTMLPropertiesCollection.cpp:
(WebCore::HTMLPropertiesCollection::itemAfter):

LayoutTests: 

* fast/dom/MicroData/element-with-empty-itemprop-expected.txt: Added.
* fast/dom/MicroData/element-with-empty-itemprop.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@119822 bbb929c8-8fbe-4397-9dbb-9b2b20218538